cabal-version:      2.4
name:               cachito
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         smnicolas@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cachito
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.2.0,
                      binary ^>=0.8.9.0,
                      bytestring ^>=0.11.3.1,
                      directory ^>=1.3.6.2,
                      filepath ^>=1.4.2.2,
                      stringsearch,
                      http-conduit ^>=2.3.8,
                      http-types ^>=0.12.3,
                      time ^>=1.11.1.1,
                      wai ^>=3.2.3,
                      warp ^>=3.3.25,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
